# KeepSultan-Web

./: .gitignore  KeepSultan.py  README.md  config.json  main.py  map.py  pyproject.toml  requirements.txt
templates/: index.html
